--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:mysql://10.222.51.65:3306/exercise
-spring.datasource.username=maja 
+spring.datasource.url=jdbc:mysql://10.222.51.65:3306/exercise?serverTimezone=UTC
+spring.datasource.username=maja
 spring.datasource.password=maja
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
